--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,110 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  background-color: #f0f0f0;
+  font-family: 'Arial, sans-serif';
+  margin: 0;
+  padding: 0;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  height: 100vh;
+  background: url('./butterfly.jpeg') no-repeat center center fixed;
+  background-size: cover;
 }
 
-.App-link {
-  color: #61dafb;
+.card {
+  width: 90%; /* Responsive width */
+  max-width: 600px;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: rgba(255, 255, 255, 0.8);
+  position: relative;
+  text-align: center;
+  transition: all 0.5s ease;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.content-wrapper {
+  position: relative;
+  z-index: 1;
+  color: #000;
+  transition: transform 0.5s ease, opacity 0.5s ease;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.content-wrapper.slide {
+  transform: translateX(100%);
+  opacity: 0;
+}
+
+.content {
+  font-size: 18px;
+}
+
+.content p {
+  margin: 15px 0; /* Space between paragraphs */
+}
+
+.content-video {
+  margin-top: 20px;
+  width: 100%; /* Ensures the video scales to the width of the container */
+  max-width: 100%;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.arrow, .reset {
+  position: relative;
+  z-index: 1;
+  cursor: pointer;
+  font-size: 24px;
+  color: #ff69b4;
+  margin-top: 20px;
+  transition: transform 0.3s ease;
+}
+
+.arrow:hover {
+  transform: translateX(5px);
+}
+
+.reset {
+  font-size: 18px;
+  color: #007bff;
+  text-decoration: underline;
+}
+
+.reset:hover {
+  color: #0056b3;
+}
+
+/* Media query for devices with a width of 600px or less */
+@media (max-width: 600px) {
+  .card {
+    padding: 15px;
   }
-  to {
-    transform: rotate(360deg);
+
+  .content {
+    font-size: 16px;
   }
+
+  .arrow, .reset {
+    font-size: 20px;
+  }
+
+  .content-video {
+    width: 100%; /* Ensure video scales properly on mobile */
+  }
+
+  .content-image {
+    margin-top: 20px;
+    max-width: 50%; /* Limit the image width to 80% of the container */
+    height: 200px; /* Maintain the aspect ratio */
+    max-height: 200px; /* Limit the image height to 300px */
+    border-radius: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    object-fit: contain; /* Ensure the image scales properly within the given dimensions */
+  }  
 }
